--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.input-field input:focus + label {
+  color: #757575 !important;
+}
+
+.row .input-field input:focus {
+  border-bottom: 1px solid #757575 !important;
+  box-shadow: 0 1px 0 0 #757575 !important
+}
+
+[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:after {
+  background-color: #f50057;
+}
+
+[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
+  border: 2px solid #f50057;
+}
+
+.card .card-image img {
+  width: 100%;
+  overflow: hidden;
+}
+
+.collection .collection-item.avatar p {
+  margin-top: 10px;
+}
+
+.row {
+  margin-bottom: 0;
+}
+
+.dg-img {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.dg-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /*object-position: 0 0;*/
+}
+
+.card-image {
+  /*width: inherit;*/
+  height: 300px;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.someright {
+  margin-left: 10px;
+}
